# IORCalc

./: README.md  meson.build  meson_options.txt
data/: README.md  iorcalc.desktop  iorcalc.gresource.xml  iorcalc.ui  meson.build  org.stronnag.iorcalc.desktop
docs/: README.md
docs/devexample/: Makefile  README.md  cprint.c  vconv.vala  vprint.vala
meson/: meson.build
samples/: manitou4.json  meson.build  summerwine.json
src/: calc_hull.c  calc_prop.c  calc_rig.c  calc_rig_extra.c  calc_rmc.c  calc_rtg.c  cert.c  gluefuncs.c  ior.h  ioralloc.c  iorcalc-config.h.in  iorcalc.vala  iorcertwin.vala  iorconst.c  iorext.h  iorfuncs.h  iormisc.vala  iorprint.vala  iorsettings.vala  iorutil.c  iorwindow.vala  jsonio.vala  meson.build  plotdata.c  plotwindow.vala  print.c  report.c  winres.rc
src/vapi/: ior.vapi
valaopts/: meson.build
